# CSI-300-Analyst

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
analyst/: __init__.py  __main__.py
analyst/config/: __init__.py  loader.py
analyst/queries/: __init__.py  base.py
analyst/queries/one/: __init__.py  average_rental_duration.py  customer_rental_count.py  monthly_rental_distribution.py
analyst/queries/two/: __init__.py  category_avg_rental_rates.py  category_rental_counts.py  top_films_by_category.py
